--- a/crates/fluxmux-cli/Cargo.toml
+++ b/crates/fluxmux-cli/Cargo.toml
@@ -12,3 +12,14 @@ serde_json = "1"
 serde_yaml = "0.9"
 csv = "1"
 anyhow = "1"
+toml = "0.8"
+# Parquet
+parquet = "*"
+arrow = "*"
+# Avro
+avro-rs = "*"
+# MsgPack
+rmp-serde = "*"
+# CBOR
+serde_cbor = "*"
+hex = "*"
