--- a/crates/fluxmux-sinks/Cargo.toml
+++ b/crates/fluxmux-sinks/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+fluxmux-core = { path = "../fluxmux-core" }
+tokio = { version = "1", features = ["full"] }
+async-trait = "0.1"
+anyhow = "1"
+chrono = { version = "0.4", features = ["serde"] }
+rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
+futures-util = "0.3"
+tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
+serde_json = "1"
